ensure CC01 sidebar notice remains visible

--- a/client/src/app/layout/layout.component.less
+++ b/client/src/app/layout/layout.component.less
@@ -60,7 +60,7 @@ nz-sider {
 }
 
 .cc-notice {
-  margin-top: 5em;
+  margin-top: .5em;
   text-align: center;
   width: 170px;
   .cc-glyph {
